update about page

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,8 @@
             </button>
           </div>
           <div class="section__circle">
-            <img src="./assets/img/stamp_btn.svg" alt="icon" />
+            <img class="stamp" src="./assets/img/stamp_btn.svg" alt="icon" />
+            <img class="stamp-arr" src="./assets/img/stamp-arr.svg" alt="icon" />
           </div>
         </div>
       </section>
@@ -124,12 +125,10 @@
                           devices tailored to meet your business needs.
                         </p>
                         <ul class="tag__list">
-                          <li class="tag__item p-3">Fintech</li>
-                          <li class="tag__item p-3">Healthcare</li>
-                          <li class="tag__item p-3">Ecommerce</li>
-                          <li class="tag__item p-3">CRM & ERP</li>
-                          <li class="tag__item p-3">Corporate Websites</li>
-                          <li class="tag__item p-3">RealEstate</li>
+                          <li class="tag__item p-3">CRM systems</li>
+                          <li class="tag__item p-3">eCommerce</li>
+                          <li class="tag__item p-3">Corporate websites</li>
+                          <li class="tag__item p-3">Dashboards</li>
                         </ul>
                         <div class="accordion__footer">
                           <ul class="accordion__price">
@@ -180,13 +179,12 @@
                           <li class="tag__item p-3">Cross platform</li>
                           <li class="tag__item p-3">Fintech</li>
                           <li class="tag__item p-3">Healthcare</li>
-                          <li class="tag__item p-3">Ecommerce</li>
                         </ul>
                         <div class="accordion__footer">
                           <ul class="accordion__price">
                             <li class="accordion__price-label">From</li>
                             <li class="accordion__price-value">
-                              <h5>$500</h5>
+                              <h5>$1000</h5>
                             </li>
                           </ul>
                           <div class="elem-action">
@@ -226,11 +224,12 @@
                           satisfaction.
                         </p>
                         <ul class="tag__list">
-                          <li class="tag__item p-3">Usability</li>
                           <li class="tag__item p-3">User experience</li>
+                          <li class="tag__item p-3">Usability</li>
                           <li class="tag__item p-3">Design Optimization</li>
                           <li class="tag__item p-3">High conversion</li>
-                          <li class="tag__item p-3">UI/UX Assessment & Strategy</li>
+                          <li class="tag__item p-3">Design Optimization</li>
+                          <li class="tag__item p-3">UX Audit</li>
                         </ul>
                         <div class="accordion__footer">
                           <ul class="accordion__price">
@@ -322,17 +321,15 @@
                       <div class="accordion__content-box">
                         <h4 class="accordion__content-title">CMS Development</h4>
                         <p class="accordion__content-text p-2">
-                          Our CMS development services focus on building user-friendly, scalable, and secure platforms
-                          tailored to your needs. Whether you're using WordPress, Drupal, Joomla, or a custom solution,
-                          we deliver responsive, SEO-optimized websites that empower you to control your digital
-                          presence without technical expertise. From content management to integration and
-                          customization, we ensure your CMS is fully optimized for performance and usability.
+                          We build secure, and user-friendly platforms tailored to your needs. Using WordPress, Drupal,
+                          Joomla or custom solutions, we deliver responsive, SEO-optimized websites for easy management
+                          and top performance.
                         </p>
                         <ul class="tag__list">
                           <li class="tag__item p-3">WordPress</li>
                           <li class="tag__item p-3">Drupal</li>
-                          <li class="tag__item p-3">Shopify</li>
                           <li class="tag__item p-3">Magento</li>
+                          <li class="tag__item p-3">Shopify</li>
                           <li class="tag__item p-3">Plugin Development</li>
                           <li class="tag__item p-3">Maintenance</li>
                         </ul>
