--- a/src/about.html
+++ b/src/about.html
@@ -169,7 +169,21 @@
                 </li>
               </ul>
               <div class="values__img">
-                <img src="./assets/img/about/values-img.jpg" alt="img" />
+                <picture>
+                  <source
+                    srcset="./assets/img/about/values-d@2x.jpg 2x, ./assets/img/about/values-d.jpg 1x"
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="./assets/img/about/values-t@2x.jpg 2x, ./assets/img/about/values-t.jpg 1x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./assets/img/about/values-m@2x.jpg 2x, ./assets/img/about/values-m.jpg 1x"
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./assets/img/about/values-d.jpg" alt="img" />
+                </picture>
               </div>
             </div>
           </div>
