--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
                         <ul class="tag__list">
                           <li class="tag__item p-3">iOS</li>
                           <li class="tag__item p-3">Android</li>
-                          <li class="tag__item p-3">Cross platform</li>
+                          <li class="tag__item p-3">Cross-platform</li>
                           <li class="tag__item p-3">Fintech</li>
                           <li class="tag__item p-3">Healthcare</li>
                         </ul>
@@ -215,7 +215,6 @@
                         <ul class="tag__list">
                           <li class="tag__item p-3">User experience</li>
                           <li class="tag__item p-3">Usability</li>
-                          <li class="tag__item p-3">Design Optimization</li>
                           <li class="tag__item p-3">High conversion</li>
                           <li class="tag__item p-3">Design Optimization</li>
                           <li class="tag__item p-3">UX Audit</li>
@@ -505,7 +504,7 @@
                 <div class="team__item-wrapper">
                   <div class="team__banner">
                     <h2 class="team__title">Our team of <span class="text-color">experts</span></h2>
-                    <p class="p-1">Discover how to enhance your product</p>
+                    <p class="team__banner-text p-1">Discover how to enhance your product</p>
                     <button class="btn btn_primary team__btn">
                       <span class="btn__text">Request Consultation</span>
                       <span class="btn__icon btn__icon-arrow">
