add favicon add loader

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/main.scss" />
     <link rel="stylesheet" href="./styles/pages/contact-us.scss" />
   </head>
-  <body>
+  <body id="content">
     <load src="./components/header.html" />
     <main>
       <section class="contacts">
