--- a/src/about.html
+++ b/src/about.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.scss" />
     <link rel="stylesheet" href="styles/pages/about.scss" />
   </head>
-  <body>
+  <body id="content">
     <load src="./components/header.html" highlight-about="is-active" />
     <main class="page-about">
       <div class="hero">
