--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.scss" />
     <link rel="stylesheet" href="styles/pages/portfolio.scss" />
   </head>
-  <body>
+  <body id="content">
     <load src="./components/header.html" highlight-portfolio="is-active" />
     <main>
       <section class="portfolio">
@@ -525,7 +525,7 @@
     </main>
 
     <load src="./components/footer.html" />
-    <script>
+    <script type="module">
       document.addEventListener("DOMContentLoaded", () => {
         const items = document.querySelectorAll(".portfolio__item");
         const loader = document.getElementById("loader");
