--- a/src/404.html
+++ b/src/404.html
@@ -33,6 +33,7 @@
       }
 
       .e-page__content {
+        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -41,6 +42,7 @@
         height: 100vh;
         color: #fff;
         font-family: "Unbounded", sans-serif;
+        z-index: 5;
       }
 
       .e-page__title {
