update portfolio text

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.scss" />
     <link rel="stylesheet" href="styles/pages/portfolio.scss" />
   </head>
-  <body id="content">
+  <body>
     <load src="./components/header.html" highlight-portfolio="is-active" />
     <main>
       <section class="portfolio">
@@ -58,18 +58,18 @@
                   <div class="portfolio__item-header">
                     <h5 class="portfolio__item-title">Sanodoc</h5>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       The Israel Broadcast TV app provides live and on-demand access to top Israeli channels, available
                       on mobile, TV, and web platforms.The Israel Broadcast TV app provides live and on-demand access to
                       top Israe
-                    </p>
+                    </li>
 
-                    <p class="p-2">
+                    <li class="p-2">
                       li channels, available on mobile, TV, and web platforms.The Israel Broadcast TV app provides live
                       and on-demand access to top Israeli channels, available on mobile, TV, and web platforms.
-                    </p>
-                  </div>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -104,17 +104,21 @@
                   <div class="portfolio__item-header">
                     <h5 class="portfolio__item-title">Tenex</h5>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       We developed a comprehensive solution for Tenex, encompassing a mobile application, CRM platform,
-                      and website tailored to streamline real estate and hospitality operations. The system includes
-                      distinct roles for users and property owners, offering tools for property management, tenant
-                      engagement, facility oversight, and real estate accounting. Designed as a white-label platform, it
-                      allows seamless branding customization while maintaining a modern, user-friendly interface.
-                      Delivered with a focus on functionality and scalability, this project reflects our commitment to
-                      creating professional solutions tailored to industry-specific needs.
-                    </p>
-                  </div>
+                      and website tailored to streamline real estate and hospitality operations.
+                    </li>
+                    <li class="p-2">
+                      The system includes distinct roles for users and property owners, offering tools for property
+                      management, tenant engagement, facility oversight, and real estate accounting.
+                    </li>
+                    <li class="p-2">
+                      customization while maintaining a modern, user-friendly interface. Delivered with a focus on
+                      functionality and scalability, this project reflects our commitment to creating professional
+                      solutions tailored to industry-specific needs.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -189,16 +193,22 @@
                     <h5 class="portfolio__item-title">NDA</h5>
                     <span class="icon icon-lock"></span>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       A comprehensive CRM platform and mobile application for the healthcare sector, specifically
-                      addressing mental health management. Designed to efficiently handle client data, treatment plans,
-                      and medication logistics, the solution includes features like team management, real-time updates,
-                      and advanced analytics. It streamlines operations, enhances service delivery, and supports mental
-                      health professionals in delivering care. Delivered under strict NDA compliance, it combines robust
-                      functionality with a user-friendly design tailored to the industry's unique needs.
-                    </p>
-                  </div>
+                      addressing mental health management.
+                    </li>
+                    <li class="p-2">
+                      Designed to efficiently handle client data, treatment plans, and medication logistics, the
+                      solution includes features like team management, real-time updates, and advanced analytics. It
+                      streamlines operations, enhances service delivery, and supports mental health professionals in
+                      delivering care.
+                    </li>
+                    <li class="p-2">
+                      Delivered under strict NDA compliance, it combines robust functionality with a user-friendly
+                      design tailored to the industry's unique needs.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -233,15 +243,20 @@
                     <h5 class="portfolio__item-title">NDA</h5>
                     <span class="icon icon-lock"></span>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       We developed a sophisticated CRM platform for managing donations and financial transactions,
-                      ensuring a seamless and efficient user experience. This solution includes intuitive tools for
-                      tracking balances, logging transactions, and managing funds, all within a clean and user-centric
-                      interface. Delivered under strict NDA compliance, this project demonstrates our commitment to
-                      creating secure, functional, and professional platforms in the finance sector.
-                    </p>
-                  </div>
+                      ensuring a seamless and efficient user experience.
+                    </li>
+                    <li class="p-2">
+                      This solution includes intuitive tools for tracking balances, logging transactions, and managing
+                      funds, all within a clean and user-centric interface.
+                    </li>
+                    <li class="p-2">
+                      Delivered under strict NDA compliance, this project demonstrates our commitment to creating
+                      secure, functional, and professional platforms in the finance sector.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -309,14 +324,16 @@
                   <div class="portfolio__item-header">
                     <h5 class="portfolio__item-title">NARLABS</h5>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       NARLABS, established in 2010, delivers cutting-edge, research-based sports nutrition products
-                      designed to help individuals exceed their natural limits. Our agency developed a modern eCommerce
-                      website for NARLABS, showcasing their commitment to quality and innovation while providing a
-                      seamless shopping experience for their customers.
-                    </p>
-                  </div>
+                      designed to help individuals exceed their natural limits.
+                    </li>
+                    <li class="p-2">
+                      Our agency developed a modern eCommerce website for NARLABS, showcasing their commitment to
+                      quality and innovation while providing a seamless shopping experience for their customers.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -351,15 +368,17 @@
                     <h5 class="portfolio__item-title">NDA</h5>
                     <span class="icon icon-lock"></span>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       We revamped this e-commerce website by conducting a thorough audit and implementing targeted
-                      enhancements to improve user experience and functionality. As part of the redesign, we introduced
-                      innovative features tailored to streamline the shopping journey while optimizing existing elements
-                      for performance and usability. This comprehensive approach ensured a modern, efficient, and
-                      engaging platform for users.
-                    </p>
-                  </div>
+                      enhancements to improve user experience and functionality.
+                    </li>
+                    <li class="p-2">
+                      As part of the redesign, we introduced innovative features tailored to streamline the shopping
+                      journey while optimizing existing elements for performance and usability. This comprehensive
+                      approach ensured a modern, efficient, and engaging platform for users.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -428,14 +447,16 @@
                   <div class="portfolio__item-header">
                     <h5 class="portfolio__item-title">Magro Group</h5>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       Magro Brothers, a family-owned company founded in 1916, specializes in producing high-quality
-                      Maltese food products, including fresh tomato-based goods and artisanal specialties. Our agency
-                      designed a modern website for them, reflecting their heritage and commitment to quality while
-                      enhancing user experience and accessibility.
-                    </p>
-                  </div>
+                      Maltese food products, including fresh tomato-based goods and artisanal specialties.
+                    </li>
+                    <li class="p-2">
+                      Our agency designed a modern website for them, reflecting their heritage and commitment to quality
+                      while enhancing user experience and accessibility.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
@@ -470,14 +491,16 @@
                     <h5 class="portfolio__item-title">NDA</h5>
                     <span class="icon icon-lock"></span>
                   </div>
-                  <div class="portfolio__item-body">
-                    <p class="p-2">
+                  <ul class="portfolio__item-body">
+                    <li class="p-2">
                       TA modern platform designed for efficient property rental management, offering tools for seamless
-                      tenant communication, payment tracking, and service coordination. Our agency provided web design
-                      and CRM solutions to streamline operations and enhance user experience, all delivered under strict
-                      NDA compliance.
-                    </p>
-                  </div>
+                      tenant communication, payment tracking, and service coordination.
+                    </li>
+                    <li class="p-2">
+                      Our agency provided web design and CRM solutions to streamline operations and enhance user
+                      experience, all delivered under strict NDA compliance.
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="portfolio__item">
