fix footer update buttons

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -37,9 +37,7 @@
                 </li>
               </ul>
               <a href="#" class="btn btn_primary-green btn_meeting">
-                <span class="btn__icon btn__icon-calendar">
-                  <span class="icon-calendar"></span>
-                </span>
+                <span class="btn__icon icon-calendar"> </span>
                 <span class="btn__text">Schedule a Meeting</span>
               </a>
 
@@ -141,9 +139,7 @@
                   <div class="form__footer-action">
                     <button class="btn_submit btn btn_primary" type="submit">
                       <span class="btn__text">Send Request</span>
-                      <span class="btn__icon btn__icon-arrow">
-                        <span class="icon-arrow-right"></span>
-                      </span>
+                      <span class="btn__icon icon-arrow-right"> </span>
                     </button>
                     <label for="file-upload" class="btn_attach btn btn_secondary-black">
                       <span class="btn__icon">
