--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,7 @@
             </p>
             <button class="btn btn_primary hero__btn">
               <span class="btn__text">Let’s Discuss Your Project</span>
-              <span class="btn__icon btn__icon-arrow">
-                <span class="icon-arrow-right"></span>
-              </span>
+              <span class="btn__icon icon-arrow-right"></span>
             </button>
           </div>
           <div class="section__circle">
@@ -131,9 +129,7 @@
                           <div class="elem-action">
                             <button class="btn btn_secondary accordion__btn">
                               <span class="btn__text">Let’s Talk</span>
-                              <span class="btn__icon btn__icon-arrow">
-                                <span class="icon-arrow-right"></span>
-                              </span>
+                              <span class="btn__icon icon-arrow-right"> </span>
                             </button>
                           </div>
                         </div>
@@ -181,9 +177,7 @@
                           <div class="elem-action">
                             <button class="btn btn_secondary accordion__btn">
                               <span class="btn__text">Let’s Talk</span>
-                              <span class="btn__icon btn__icon-arrow">
-                                <span class="icon-arrow-right"></span>
-                              </span>
+                              <span class="btn__icon icon-arrow-right"> </span>
                             </button>
                           </div>
                         </div>
