update circle btn on home page

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
               <span class="btn__icon icon-arrow-right"></span>
             </button>
           </div>
-          <div class="section__circle">
+          <a href="#services" class="section__circle">
             <img class="stamp" src="./assets/img/stamp_btn.svg" alt="icon" />
             <img class="stamp-arr" src="./assets/img/stamp-arr.svg" alt="icon" />
-          </div>
+          </a>
         </div>
       </section>
 
@@ -86,7 +86,7 @@
       </section>
 
       <section class="section-bg">
-        <section class="services section">
+        <section id="services" class="services section">
           <div class="container">
             <div class="services__content">
               <h2 class="services__title">Providing visual <span class="text-color">services</span></h2>
